--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "AMROBOTS-FILTER-BOT",
+    "name": "BENZMOVIES-FILTER-BOT",
     "description": "This is auto filter bot with many advanced features.",
     "stack": "container",
     "keywords": [
